package com.dev.alan.patterns.behavioral.observer;

public interface Observer {
    void update(int temperature);
}
